--- a/requirements.txt
+++ b/requirements.txt
@@ -38,7 +38,7 @@ neo4j-driver==1.6.2
 neo4jrestclient==2.1.1
 neomodel==3.3.0
 neotime==1.0.0
-notebook ~> 5.7.1
+notebook >= 5.7.1
 numpy==1.15.4
 pandas==0.23.4
 pandocfilters==1.4.2
